deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmodel-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts: [openmodel.sh]
      secretName: openmodel-sh-tls
  rules:
    - host: openmodel.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openmodel-web
                port:
                  name: http
